// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectMenu > renders basic case correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_0" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with by correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_2" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with clearSearchOnClose correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_20" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with color correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_26" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with creatable correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_18" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with debounce correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_21" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with disabled correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_15" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with icon correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_7" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with id correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_4" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with leading correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_12" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with leadingIcon correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_9" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with loading correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_13" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with loadingIcon correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_8" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with multiple correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_16" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with name correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_5" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with optionAttribute correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_28" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with options correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_3" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with padded correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_24" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with placeholder correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_23" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with popper correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_31" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with query correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_1" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with required correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_6" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with searchAttributes correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_30" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with searchable correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_17" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with searchablePlaceholder correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_19" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with selectClass correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_32" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with selectedIcon correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_14" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with showCreateOptionWhen correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_22" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with size correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_25" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with trailing correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_11" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with trailingIcon correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_10" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with valueAttribute correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_29" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;

exports[`SelectMenu > renders with variant correctly 1`] = `
"<div class="" data-headlessui-state="">
  <!--v-if-->
  <div id="headlessui-listbox-button-Uwh3IPE507_27" aria-haspopup="listbox" aria-expanded="false" data-headlessui-state="" role="button" class="">label</div>
  <!--v-if-->
</div>"
`;
